Mobile side needs vert alignment, otherwise fixed viewing.

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,7 @@ body {
   
  
  
- text-align: center;
-  
+ 
 }
 
 nav {
@@ -863,7 +862,7 @@ width: 50%;
 
 }
 
-@media screen and (max-width: 377px) {
+@media screen and (max-width: 400px) {
 
 
 .site-title{
